--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-df1-gateway",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "",
   "main": "df1-gateway.js",
   "node-red": {
@@ -31,5 +31,8 @@
   "license": "ISC",
   "optionalDependencies": {
     "@protocols/node-df1-gateway": "^1.0.2"
-  }
+  },
+  "bundledDependencies": [
+    "@protocols/node-df1-gateway"
+  ]
 }
